# logging

./: LoggerPlugin.podspec  README.md  logger-monorepo.code-workspace
.github/: CODEOWNERS
.github/workflows/: aggregator-cd.yaml  aggregator-ci.yaml  interface-cd.yaml  interface-ci.yaml  logger-plugin-js-cd.yaml  logger-plugin-js-ci.yaml  logger-plugin-kt-cd.yaml  logger-plugin-kt-ci.yaml  logger-plugin-py-cd.yaml  logger-plugin-py-ci.yaml  logger-plugin-rs-cd.yaml  logger-plugin-rs-ci.yaml  logger-plugin-swift-ci.yaml
aggregator/: README.md  URI.txt  deployment.json  jest.config.js  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
aggregator/resources/: README.md
aggregator/src/: index.ts
aggregator/src/__tests__/: e2e.spec.ts
logger/implementations/js/: README.md  package.json  polywrap.graphql  polywrap.yaml  tsconfig.json
logger/implementations/js/src/: index.ts  (+1 more)
logger/implementations/kt/: .gitignore  README.md  build.gradle.kts  package.json  polywrap.yaml  settings.gradle.kts
logger/implementations/logger-plugin-js/: jest.config.js  package.json
logger/implementations/py/: README.md  polywrap.yaml  pyproject.toml  schema.graphql
logger/implementations/rs/: Cargo.toml  README.md
logger/implementations/rs/src/: lib.rs
logger/implementations/swift/: .gitignore  Package.resolved  Package.swift  package.json  polywrap.yaml
logger/interface/: README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
logger/interface/resources/: README.md
(+20 files in other folders)
