[package]
name = "polywrap_logger_plugin"
description = "Polywrap rust logger plugin"
license = "MIT"
edition = "2021"
rust-version = "1.69"
version = "0.0.1"

[dependencies]
polywrap_core = "0.1.6-beta.13"
polywrap_plugin = "0.1.6-beta.13"
polywrap_msgpack_serde = "0.0.2-beta.5"
polywrap_resolvers = "0.1.6-beta.13"
wrap_manifest_schemas = "0.1.6-beta.13"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.40"

log = "0.4.17"

[dev-dependencies]
polywrap_client.workspace = "0.1.6-beta.13"
env_logger = "0.9"  # for initializing the logger during tests
